--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
